--- a/create-react-express/client/public/index.html
+++ b/create-react-express/client/public/index.html
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Socks Social</title>
   </head>
   <body>
     <noscript>
@@ -37,6 +37,7 @@
 <!-- Cloudinary assets -->
 <!-- <script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script> -->
 <script src="https://widget.cloudinary.com/global/all.js"></script>
+
 
 
     <!--
